# xbmc-pvr-addons

./: .gitignore  README.md  configure.ac
addons/: Makefile.am  Makefile.include.am
addons/pvr.demo/project/VS2010Express/: pvrclient_demo.vcxproj
addons/pvr.dvblink/: Makefile.am
addons/pvr.dvblink/addon/: addon.xml  changelog.txt
addons/pvr.dvblink/addon/resources/: settings.xml
addons/pvr.dvblink/addon/resources/language/English/: strings.xml
addons/pvr.dvblink/project/VS2010Express/: pvrclient_dvblink.vcxproj  pvrclient_dvblink.vcxproj.filters
addons/pvr.dvblink/src/: DVBLinkClient.cpp  DVBLinkClient.h  HttpPostClient.cpp  HttpPostClient.h  client.cpp  client.h
addons/pvr.fortherecord.argus/project/VS2010Express/: pvr.fortherecord.argus.vcxproj
addons/pvr.hts/project/VS2010Express/: pvrclient_tvheadend.vcxproj
addons/pvr.hts/src/: HTSPDemux.cpp
addons/pvr.mediaportal.tvserver/project/VS2010Express/: XBMC_MediaportalTVserver.vcxproj
addons/pvr.njoy/project/VS2010Express/: pvrclient_njoy.vcxproj
addons/pvr.vdr.vnsi/project/VS2010Express/: pvrclient_vdr_vnsi.vcxproj
lib/: Makefile.am
lib/jsoncpp/project/VS2010Express/: libjsoncpp.vcxproj
lib/libcurl/: curl-config  libcurl.pc
lib/libcurl/lib/: curl_config.h  curl_config.h.in
lib/libcurl/src/: curl  hugehelp.c
lib/libdvblinkremote/: Makefile.am  add_schedule_request.cpp  curlhttpclient.h  dvblinkremotecommunication.cpp
lib/libdvblinkremote/project/VS2010Express/: libdvblinkremote.vcxproj  libdvblinkremote.vcxproj.filters
lib/libdvblinkremote/src/: curlhttpclient.h  delete_schedule_request.cpp  get_object_request.cpp  request.h  response.h
lib/libhts/Win32/: libhts_2010.vcxproj
lib/tinyxml2/: CMakeLists.txt  Makefile.am  dox  tinyxml2.cpp  tinyxml2.h  xmltest.cpp
lib/tinyxml2/tinyxml2/: tinyxml2.vcxproj
project/BuildDependencies/scripts/: dlextract.bat
project/VS2010Express/: xbmc-pvr-addons.sln
project/VS2010Express/platform/: platform.vcxproj
project/VS2010Express/tinyxml/: tinyxml.vcxproj
